# qshell

./: .clang-tidy  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  QWEN.md  README.md  vcpkg.json
.github/workflows/: linux.yml  macos.yml  windows-msvc2022.yml
docs/: LuaScriptEngine.md  MCP.md  Milestone.md  macOS-Packaging.md
scripts/: linux-build.sh  macos-build.sh  macos-create-icon.sh  windows-build.ps1
scripts/lua/: reboot_test.lua  startup_args_test.lua  timer_test.lua
src/: CMakeLists.txt  main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  CryptoHelper.cpp  CryptoHelper.h  SessionData.h  datatype.h
src/mcp/: McpHttpServer.cpp  McpHttpServer.h  McpToolRegistry.cpp  McpToolRegistry.h
src/protocol/: IProtocol.h
src/resources/: Info.plist.in  qshell.desktop  resources.qrc
src/resources/script/: ssh_login.sh
src/scriptengine/: LuaScriptEngine.cpp  LuaScriptEngine.h  ScriptRunner.cpp  ScriptRunner.h
src/ui/: MainWindow.cpp  MainWindow.h  SettingDialog.cpp  SettingDialog.h
src/ui/button_toolbar/: CommandButtonBar.cpp  CommandButtonBar.h
src/ui/command/: CommandButtonBar.cpp  CommandButtonBar.h  CommandHistoryDialog.cpp  CommandHistoryDialog.h  CommandWindow.cpp  CommandWindow.h
src/ui/session/: CollapsibleDockWidget.cpp  CollapsibleDockWidget.h  GroupEditDialog.cpp  GroupEditDialog.h  SessionEditDialog.cpp  SessionEditDialog.h  SessionTabWidget.cpp  SessionTabWidget.h  SessionTreeWidget.cpp  SessionTreeWidget.h
src/ui/terminal/: BaseTerminal.cpp  BaseTerminal.h  LocalTerminal.cpp  LocalTerminal.h  SSHTerminal.h  SSHTerminalLinux.cpp  SSHTerminalWindows.cpp  SerialTerminal.cpp  SerialTerminal.h
